Implémentation de la feature permettant de consulter une note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CDR Notes</string>
+    <string name="mettez_un_titre">Mettez un titre</string>
+    <string name="ecrivez_votre_note">Ecrivez votre note</string>
 </resources>
